k8s/test/deployment.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: reservations
  name: reservations
spec:
  replicas: 2
  selector:
    app: reservations
    deploymentconfig: reservations
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
      creationTimestamp: null
      labels:
        app: reservations
        deploymentconfig: reservations
    spec:
      containers:
        - env:
            - name: TEQUILA_HOST
              valueFrom:
                configMapKeyRef:
                  key: TEQUILA_HOST
                  name: config
            - name: MOCK_ORACLE
              valueFrom:
                configMapKeyRef:
                  key: MOCK_ORACLE
                  name: config
            - name: SITE_URL
              valueFrom:
                configMapKeyRef:
                  key: SITE_URL
                  name: config
          image: >-
            docker-registry.default.svc:5000/reservations-test/reservations:develop
          imagePullPolicy: Always
          name: reservations
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /opt/dinfo/etc
              name: volume-7s8dg
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            defaultMode: 420
            name: config
          name: volume-7s8dg
  test: false
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - reservations
        from:
          kind: ImageStreamTag
          name: 'reservations:develop'
          namespace: reservations-test
      type: ImageChange
    - type: ConfigChange
